changed pdfBase64 / documentBase64String to base64.
