# docs/swagger.json
@@ -51,7 +51,7 @@
                             "type": "string"
                         },
                         "collectionFormat": "multi",
-                        "description": "Fields to exclude from the response. Allowed values: `documentTitle`, `timeCreated`, `ownerUUID`, `ownerType`, `pdfBase64`.",
+                        "description": "Fields to exclude from the response. Allowed values: `documentTitle`, `timeCreated`, `ownerUUID`, `ownerType`, `base64`.",
                         "name": "exclude",
                         "in": "query"
                     }
@@ -188,6 +188,44 @@
                 }
             }
         },
+        "/generatemeta": {
+            "post": {
+                "description": "Retrieves metadata associated with a given UUID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meta"
+                ],
+                "summary": "Get metadata by UUID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The base64 of the document",
+                        "name": "base64",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful creation of metadata",
+                        "schema": {
+                            "$ref": "#/definitions/models.Meta"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request, typically due to missing param"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/meta": {
             "get": {
                 "description": "Retrieves metadata associated with a given UUID.",
@@ -221,7 +259,7 @@
                         "description": "Bad request, typically due to missing/invalid UUID"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             },
@@ -256,7 +294,7 @@
                         "description": "Bad request, typically due to invalid input"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             },
@@ -297,7 +335,7 @@
                         "description": "Bad request, typically due to invalid input"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             },
@@ -338,7 +376,7 @@
                         "description": "Bad request, typically due to invalid input"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             }
@@ -387,7 +425,7 @@
                         "description": "Bad request, typically due to missing/invalid UUID parameter"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             },
@@ -428,7 +466,7 @@
                         "description": "Bad request, typically due to invalid input"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             },
@@ -472,7 +510,7 @@
                         "description": "Bad request, typically due to missing/invalid UUID parameter"
                     },
                     "500": {
-                        "description": "Internal server error, typically due to database issues"
+                        "description": "Internal server error, "
                     }
                 }
             }
@@ -482,6 +520,9 @@
         "models.Document": {
             "type": "object",
             "properties": {
+                "base64": {
+                    "type": "string"
+                },
                 "documentTitle": {
                     "type": "string"
                 },
@@ -493,9 +534,6 @@
                     "type": "integer"
                 },
                 "ownerUUID": {
-                    "type": "string"
-                },
-                "pdfBase64": {
                     "type": "string"
                 },
                 "selectionData": {
@@ -644,7 +682,7 @@
         "v1.CreateRequest": {
             "type": "object",
             "properties": {
-                "documentBase64String": {
+                "base64": {
                     "type": "string"
                 },
                 "documentTitle": {
